performs automatic type-inference of declared constants; additional
support for local structure declarations (cf. locales and HOL
records), see also isar-ref manual.  Potential INCOMPATIBILITY: need
to observe strictly sequential dependencies of definitions within a
single 'constdefs' section -- some existing specifications may have to
be reordered.

* Pure: 'advanced' translation functions (parse_translation etc.) may
depend on the signature of the theory context being presently used for
parsing/printing, see also isar-ref manual.



New in Isabelle2004 (April 2004)
--------------------------------

*** General ***

* Provers/order.ML:  new efficient reasoner for partial and linear orders.
  Replaces linorder.ML.

* Pure: Greek letters (except small lambda, \<lambda>), as well as Gothic
  (\<aa>...\<zz>\<AA>...\<ZZ>), calligraphic (\<A>...\<Z>), and Euler
  (\<a>...\<z>), are now considered normal letters, and can therefore
  be used anywhere where an ASCII letter (a...zA...Z) has until
  now. COMPATIBILITY: This obviously changes the parsing of some
  terms, especially where a symbol has been used as a binder, say
  '\<Pi>x. ...', which is now a type error since \<Pi>x will be parsed
  as an identifier.  Fix it by inserting a space around former
  symbols.  Call 'isatool fixgreek' to try to fix parsing errors in
  existing theory and ML files.

* Pure: Macintosh and Windows line-breaks are now allowed in theory files.

* Pure: single letter sub/superscripts (\<^isub> and \<^isup>) are now 
  allowed in identifiers. Similar to Greek letters \<^isub> is now considered 
  a normal (but invisible) letter. For multiple letter subscripts repeat 
  \<^isub> like this: x\<^isub>1\<^isub>2. 

* Pure: There are now sub-/superscripts that can span more than one
  character. Text between \<^bsub> and \<^esub> is set in subscript in
  ProofGeneral and LaTeX, text between \<^bsup> and \<^esup> in
  superscript. The new control characters are not identifier parts.
